# rust-microservice

./: Cargo.toml  README.md
src/: main.rs
